<resources>
    <string name="app_name">iScan</string>
    <string name="iscan_about">About</string>
    <string name="iscan_back">Back</string>
    <string name="about_logo_text">About iscan</string>
    <string name="about_logo_text2">Version: V4.3.2</string>
    <string name="app_build_date">Build-20180731</string>
    <string name="sym_translate_upca_to_ean13_enable_title">Translate UPCA to EAN13</string>
    <string name="iscan_update">Check update</string>
    <string name="iscan_exit_msg">After exiting, you will not be able to use the background scanning \n , are you sure want to quit?</string>
    <string name="iscan_exit_title"> Exit iScan</string>
    <string name="iscan_ok">YES</string>
    <string name="iscan_cancel">NO</string>
    <string name="iscan_setting">Advanced setting</string>
    <string name="iscan_exit">Exit</string>
    <string name="iscan_barcode">Barcode scanning</string>
    <string name="iscan_barcode_On">Enable barcode scanning</string>
    <string name="iscan_barcode_off">Disable barcode scanning</string>
    <string name="iscan_rfid"> RFID scanning</string>
    <string name="iscan_rfid_On">Enable RFID scanning</string>
    <string name="iscan_rfid_off">Disable RFID scanning</string>
    <string name="iscan_decodefeedback">Decoding feedback</string>
    <string name="iscan_decodefeedback_entries">Related settings after scanning decoding</string>
    <string name="iscan_broadcast">Output mode</string>
    <string name="iscan_broadcast_on">Scanning results will be broadcast</string>
    <string name="iscan_broadcast_off">Scanning results are output to the focus edit box in the foreground</string>
    <string name="iscan_beep">&#160;&#160;&#160;&#160;&#160;&#160;Prompt tone</string>
    <string name="iscan_beep_on">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Prompt tone for successful scanning</string>
    <string name="iscan_beep_off">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Not prompt tone for successful scanning</string>
    <string name="iscan_power">&#160;&#160;&#160;&#160;&#160;&#160; Power saving mode</string>
    <string name="iscan_power_on">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Power on scanning system upon black screen</string>
    <string name="iscan_power_off">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; Power off scanning system upon black screen</string>
    <string name="iscan_vibrate">&#160;&#160;&#160;&#160;&#160;&#160;Vibration</string>
    <string name="iscan_vibrate_on">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Vibrate upon successful scanning</string>
    <string name="iscan_vibrate_off">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Not vibrate upon successful scanning</string>
    <string name="iscan_addfunction">Additional function</string>
    <string name="iscan_autorun">&#160;&#160;&#160;&#160;&#160;&#160;Autorun upon startup</string>
    <string name="iscan_autorun_on">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Autorun on</string>
    <string name="iscan_autorun_off">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Autorun off</string>
    <string name="iscan_continus_scan">Continuous scanning</string>
    <string name="iscan_continus_scan_on">Enable continuous scanning</string>
    <string name="iscan_continus_scan_off">Disable continuous scanning</string>
    <string name="iscan_rfid_antitone">&#160;&#160;&#160;&#160;&#160;&#160;RFID antitone</string>
    <string name="iscan_rfid_antitone_on">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; Enable card ID antitone upon successful RFID scanning</string>
    <string name="iscan_rfid_antitone_off">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Disable card ID antitone upon successful RFID scanning</string>
    <string name="iscan_addcontext">&#160;&#160;&#160;&#160;&#160;&#160;Additional content</string>
    <string name="default_addcontext">1</string>
    <string name="default_addcontext_summeray">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Additional Enter key</string>
    <string name="iscan_light_title">&#160;&#160;&#160;&#160;&#160;&#160;Status indicator lamp</string>
    <string name="iscan_light_on">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Open the lamp when scanning</string>
    <string name="iscan_light_off">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Close the lamp when scanning</string>
    <string name="iscan_deletect_off">Disenable delete the edit box characters</string>
    <string name="iscan_deletect_on">Enable delete the edit box characters</string>
    <string name="iscan_deletect">Delete the edit box characters</string>
    <string-array name="method_addcontext_entries">
        <item>None</item>
        <item>Additional Enter key</item>
        <item>Additional Tab key</item>
        <item>Additional line break</item>
    </string-array>
    <string-array name="method_addcontext_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="iscan_decode_method">Decoding mode</string>
    <string name="default_decode_summeray">auto</string>
    <string name="default_decode_method">0</string>
    <string-array name="method_entries">
        <item>auto</item>
        <item>GB2312</item>
        <item>GBK</item>
        <item>GB18030</item>
        <item>UTF-8</item>
        <item>ISO-8859-1</item>
        <item>BIG5</item>
        <item>SJIS</item>
        <item>EUC-JP</item>
    </string-array>
    <string-array name="method_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="iscan_intverbaltime_set">It must be an integer greater than or equal to 0. Please set again</string>
    <string name="iscan_enter_password">Please enter the password</string>
    <string name="iscan_password">Password:</string>
    <string name="iscan_password_error">The password is incorrect. Please enter it again!</string>
    <string name="iscan_password_ok">OK</string>
    <string name="iscan_password_cancel">Cancel</string>
    <string name="soft_update_no">Already the latest version</string>
    <string name="soft_update_title">Software update</string>
    <string name="soft_update_info">Detected the latest software version. Update immediately?</string>
    <string name="soft_update_updatebtn">Update</string>
    <string name="soft_update_later">Update later</string>
    <string name="soft_updating">Updating</string>
    <string name="soft_update_cancel">Cancel</string>
    <string name="iscan_no_wifi">No Internet Connection</string>
    <string name="iscan_barcode_results">Barcode scanning results</string>
    <string name="iscan_rfid_results">RFID scanning results</string>
    <string name="iscan_prefix">Add the prefix</string>
    <string name="iscan_suffix">Add the suffix</string>
    <string name="iscan_interval_time">Scanning time interval(ms)</string>
    <string name="iscan_filter_character">Filtering the specified character</string>
    <string name="iscan_enable_code">Scanner Setting</string>
    <string name="iscan_input_context">Input character:</string>
    <string name="iscan_test">Scanner Test:</string>
    <string name="iscan_enable_reset">Restore defaults</string>
    <string name="iscan_notice_off">Hide the notification bar icon</string>
    <string name="iscan_notice_on">Show the notification bar icon</string>
    <string name="iscan_notice">Notification bar icon</string>
    <string name="iscan_icon_off">Hide the APP bar icon</string>
    <string name="iscan_icon_on">Show the APP bar icon</string>
    <string name="iscan_icon">APP bar icon </string>
    <string name="iscan_hint">Value is out of range</string>
    <string name="iscan_hint_error">Parameter error</string>
    <string name="iscan_trimleft">Trim left </string>
    <string name="iscan_trimright">Trim right</string>
    <string name="iscan_scankey_config">Scan key configuration</string>
    <string name="iscan_middle_scankey_config">Middle yellow key configuration</string>
    <string name="iscan_left_scankey_config">Lfte yellow key configuration</string>
    <string name="iscan_right_scankey_config">Right yellow key configuration</string>
    <string name="iscan_barcode_scankey">Barcode scanning</string>
    <string name="iscan_rfid_scankey">RFID scanning</string>
    <string name="iscan_user_scankey">User defined</string>
    <string name="iscan_middle__a5_scankey_config">Bottom key configuration </string>
    <string name="iscan_left_scankey_a5_config"> Left lower key configuration</string>
    <string name="iscan_right_scankey_a5_config">Right lower key configuration</string>
    <string name="iscan_upleft_scankey_config">Left upper key configuration</string>
    <string name="iscan_outtime">Scanner Timeout(s)</string>
    <string name="iscan_decodeouttime">Scanner data interval timeout(ms)</string>
    <string name="iscan_faile_beep_on">Prompt tone for failure scanning</string>
    <string name="iscan_faile_beep_off">Not prompt tone for failure scanning</string>
    <string name="iscan_scanfaile">Prompt tone</string>
    <string name="symbology_advanced_configuration">Advanced Configuration</string>
    <string name="symbology_advanced_configuration_summary">For configuring min, max, flags, etc.</string>
    <string name="sym_codabar_title">Codabar</string>
    <string name="sym_code11_title">Code11</string>
    <string name="sym_code39_title">Code39</string>
    <string name="sym_ean8_title">EAN8</string>
    <string name="sym_ean13_title">EAN13</string>
    <string name="sym_int25_title">INT25</string>
    <string name="sym_upca_title">UPC-A</string>
    <string name="sym_upce0_title">UPC-E0</string>
    <string name="symbology_select_to_configure_advanced_properties">Select to config advanced properties</string>
    <string name="sym_uncheck_to_disable">Currently enabled, uncheck to disable</string>
    <string name="sym_check_to_enable">Currently disabled, check to enable</string>
    <string name="scanning_preferences">Scanning Preferences</string>
    <string name="title_lights_config">Lights Configuration</string>
    <string name="title_lights_config_summary">For configuring lights mode</string>
    <string name="sym_check_enable_title">Check Enable</string>
    <string name="sym_start_stop_transmit_enable_title">Start/Stop Transit</string>
    <string name="sym_fullascii_enable_title">Start/Stop Transit</string>
    <string name="sym_check_transmit_enable_title">Check Transmit</string>
    <string name="sym_num_transmit_enable_title">Num Transmit</string>
    <string name="sym_2_digit_addenda_enable_title">2 or 5 Digit Addenda</string>
    <string name="sym_5_digit_addenda_enable_title">2 or 5 Digit Addenda</string>
    <string name="sym_upce0_expanded_enable_title">UPCE0 Exanded</string>
    <string name="iscan_send_title">Scan results Send mode</string>
    <string name="default_send_summeray">Scan results Send mode</string>
    <string name="iscan_advance_password">Change password </string>
    <string name="decode_centering_mode_list_title">Mode Configuration</string>
    <string name="decode_centering_mode_list_summary">For Centering Mode</string>
    <string name="iscan_stopscan_off"> Do not Stop scanning</string>
    <string name="iscan_stopscan_on">Stop scanning</string>
    <string name="iscan_key_stop">Effort saving model</string>
    <string name="title_securite_config">Security level</string>
    <string name="title_securite_config_summary">For configuring securite level</string>
    <string name="title_lightsintensity_config">Fill lights intensity</string>
    <string name="title_lightsintensity_config_summary">For configuring Fill lights intensity</string>
    <string name="iscan_log">Output log</string>
    <string name="sym_translate_ean8_to_ean13_enable_title">translate_ean8_to_ean13</string>
</resources>